@@ -131,3 +131,9 @@ VC4-Development-0.0.0-203
 	+ Test infinite world
 VC4-Development-0.0.0-205
 	* Fixed issues with lwjgl natives
+VC4-Development-0.0.0-206
+	+ Added interface for half blocks
+VC4-Development-0.0.0-207
+	+ Added stairs renderer
+VC4-Development-0.0.0-208
+	* Fixed block renderer bugs
